WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246271
CompletionHandler cannot be called from arbitrary thread
https://bugs.webkit.org/show_bug.cgi?id=246271
Summary
CompletionHandler cannot be called from arbitrary thread
Kimmo Kinnunen
Reported
2022-10-10 02:25:45 PDT
CompletionHandler cannot be called from arbitrary thread Currently only from main thread or only from the constructor thread.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-10 02:26:48 PDT
<
rdar://problem/100969234
>
Kimmo Kinnunen
Comment 2
2022-10-10 02:48:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5185
EWS
Comment 3
2022-10-15 04:02:36 PDT
Committed
255576@main
(62b32a176f30): <
https://commits.webkit.org/255576@main
> Reviewed commits have been landed. Closing PR #5185 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug